# -filtering_confidential_information

./: .coveragerc  .env.example  .flake8  .gitignore  CONTRIBUTING.md  Dockerfile  ML_system_design_doc.md  Makefile  README.md  docker-compose.airflow.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci-cd.yml  ci.yml
app/: main.py
app/adapters/detectors/: factory.py  hybrid_detector.py  model_detector.py  rule_detector.py
app/api/: routes.py  schemas.py
app/application/use_cases/: assess_text.py
app/batch/: compute_metrics.py  runner.py
app/domain/: __init__.py  entities.py  interfaces.py  models.py
app/inference/: store.py
app/infrastructure/config/: __init__.py  config.py  settings.py
app/infrastructure/monitoring/: metrics.py
app/review/: export_dataset.py  store.py
app/storage/: s3.py
app/training/: __init__.py  config.py  data.py  metrics.py  train_bert.py
configs/training/: bert_base.yaml
dags/: airflow_runtime_connections.py  bert_training_dag.py  confidential_batch_dag.py
docs/: IMPLEMENTATION_STATUS.md
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
k8s/: README.md  app-deployment.yaml  app-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.example.yaml  kustomization.yaml  namespace.yaml  secret.example.yaml
k8s/airflow/: README.md  airflow-connections-sync-job.yaml  airflow-init-job.yaml.template  airflow-scheduler-deployment.yaml.template  airflow-webserver-deployment.yaml.template  airflow-webserver-service.yaml  postgres-deployment.yaml.template  postgres-service.yaml
pipelines/: bert_pipeline_standalone.py  train_bert_remote.sh
scripts/airflow/: init_airflow.sh
tests/integration/: test_api.py  test_review_api.py
tests/unit/: test_batch_compute.py  test_batch_runner.py  test_detector_factory.py  test_hybrid_detector.py  test_inference_store.py  test_model_detector.py  test_monitoring_metrics.py  test_review_store.py  test_rule_detector.py  test_storage_s3.py  test_train_bert.py  test_training_data.py  test_training_metrics.py  test_use_case.py
